<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--AUTH-->
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="incorrect_email">Incorrect Email format!</string>
    <string name="incorrect_password">Incorrect Password format!</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="name">Name</string>
    <string name="incorrect_name">Incorrect name format!</string>
    <!--ERROR-->
    <string name="bad_request">Bad Request</string>
    <string name="internal_server_error">Internal Server Error</string>
</resources>