package com.example.sharedandroid.ui

object Tags {
    const val TAG_PASSWORD_HIDDEN = "password_hidden"
    const val TAG_PASSWORD_VISIBLE = "password_visible"
    const val TAG_PASSWORD_VISIBLE_ICON = "password_visible_icon"
    const val TAG_PASSWORD_HIDDEN_ICON = "password_visible_icon"
}